Fix banner z-index

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -130,7 +130,7 @@ h6 {
     background: url(../img/banner-bg.jpg) no-repeat center center;
     background-size: cover;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 
 .banner:after {
